--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: check-flux-helm-values
   name: Check flux helm values
   description: "Verify that values used by flux HelmReleases are ok."
-  entry: python checkHelmValues.py
+  entry: check-flux-helm-values
   language: python
   files: ^[^.].*\.yaml$
