--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    check-flux-helm-values = check_flux_helm_values:main
+    check-flux-helm-values = pre_commit_hooks.check_flux_helm_values:main
