adjustments from review

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = pre_commit_hooks
+name = pre_commit_flux
 
 [options]
 packages = find:
@@ -9,4 +9,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    check-flux-helm-values = pre_commit_hooks.check_flux_helm_values:main
+    check-flux-helm-values = pre_commit_flux.check_flux_helm_values:main
