--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ packages = find:
 python_requires = >= 3.8.5
 install_requires =
     pyyaml
+    flux-local==0.10.0
 
 [options.entry_points]
 console_scripts =
