Update flux-local version pin

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ packages = find:
 python_requires = >= 3.8.5
 install_requires =
     pyyaml
-    flux-local==0.10.0
+    flux-local>=1.0.1
 
 [options.entry_points]
 console_scripts =
